fix aria-label and contrast in shopping_cart for tpl_modified_nova
git-svn-id: https://svn.modified-shop.org/svn/modified-shop/trunk@15424 79ac0487-9261-4f26-a34d-858dee0dcce0

--- a/templates/tpl_modified_nova/stylesheet.css
+++ b/templates/tpl_modified_nova/stylesheet.css
@@ -3599,7 +3599,7 @@ a.view_box.active {
   font-size:10px;
   line-height:20px;  
   font-weight:400;
-  color:#999;
+  color:#666;
   padding: 0px 10px;
   text-transform:uppercase;
 }
@@ -3925,14 +3925,14 @@ a.view_box.active {
   font-weight:700;
 }
 .ot_red {
-  color:#e32828 !important;
+  color:#dd1d1d !important;
 }
 
 .color_ot_total {
-  color:#e32828;
+  color:#dd1d1d;
 }
 .color_error_message {
-  color:#e32828;
+  color:#dd1d1d;
 }
 /* 25. END shopping_cart and checkout */
 
